# rush-hour

./: .gitignore  .gitignore~  CMakeLists.txt  LISEZMOI.txt  Makefile  main_jeu.c
base/: main.c
code/: piece.c
include/: affiahcetest.c  game.h  game_board.h  piece.h  solveur.h  test
jeu/: CMakeLists.txt
nbproject/: configurations.xml  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
src/: CMakeLists.txt  Makefile  _game.c  _main_jeu.c  game.c  game.c~  game_board.c  main_game.c  main_jeu.c  piece.c  solveurV3.c  testTab  testTab.c
test/: CMakeLists.txt  Makefile  solveur  test_game1.c  test_piece1.c
test/test_solveur/: solveur  testSolveurVal.c
